--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -71,6 +71,7 @@
     }
 
     &__textarea{
+        background-color: colors.$secondary-white;
         border: 1px solid colors.$secondary-gray;
         border-radius: 4px;
         padding-top: 0.6875rem;
