--- a/src/components/CtaButton/CtaButton.scss
+++ b/src/components/CtaButton/CtaButton.scss
@@ -10,6 +10,7 @@
     position: relative;
     width: 100%;
     height: 2.5rem;
+    cursor: pointer;
 
     &__icon{
         position: absolute;
