--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
 
 
 .navbar{
-    padding: 0.25rem 0.5rem;
+    padding: 0.25rem 0.5rem 0.5rem;
 
     @include tablet{
         padding: 0.5rem 1.75rem;
