--- a/src/components/VideoCard/VideoCard.scss
+++ b/src/components/VideoCard/VideoCard.scss
@@ -5,6 +5,7 @@
     margin-bottom: 0.75rem;
     height: 3.75rem;
     display: flex;
+    cursor: pointer;
 
     @include tablet{
         margin-bottom: 1.5rem;
